--- a/burger/src/app/globals.css
+++ b/burger/src/app/globals.css
@@ -7,3 +7,21 @@ section.hero{
   @apply grid;
   grid-template-columns: .4fr .6fr;
 }
+
+
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+  @apply block w-full my-2 rounded-xl;
+  @apply block border p-2 border-gray-400 bg-gray-200;
+
+}
+
+button{
+  @apply block w-full text-gray-300 font-semibold;
+  @apply border border-gray-500 rounded-xl;
+}
+button[type='submit'], .submit{
+  @apply border-0 bg-primary text-white
+
+}
