--- a/burger/src/app/globals.css
+++ b/burger/src/app/globals.css
@@ -16,6 +16,11 @@ input[type="text"] {
   @apply block border p-2 border-gray-400 bg-gray-200;
 
 }
+input[type="email"]:disabled,
+input[type="password"]:disabled,
+input[type="text"]:disabled {
+  @apply bg-gray-300 cursor-not-allowed
+}
 
 button{
   @apply block w-full text-gray-300 font-semibold;
@@ -25,3 +30,13 @@ button[type='submit'], .submit{
   @apply border-0 bg-primary text-white
 
 }
+
+button[type='submit'], .submit{
+  @apply border-0 bg-primary text-white
+
+}button[type='submit']:disabled, .submit{
+  @apply cursor-not-allowed bg-gray-300
+
+}
+
+
