--- a/burger/src/app/globals.css
+++ b/burger/src/app/globals.css
@@ -40,12 +40,10 @@ button {
 
 button[type='submit'],
 .submit {
-  @apply border-0 bg-primary text-white
+  @apply border-primary bg-primary text-white
 }
 
-button[type='submit'], .submit {
-  @apply border-0 bg-primary text-white
-}
+
 
 button[type='submit']:disabled, .submit {
   @apply cursor-not-allowed bg-gray-300
