menu&category/deleteConfirmation

--- a/burger/src/app/globals.css
+++ b/burger/src/app/globals.css
@@ -39,7 +39,8 @@ button, .button {
 }
 
 button[type='submit'],
-.submit {
+.submit,
+button.primary {
   @apply border-primary bg-primary text-white
 }
 
