user/user-edits

--- a/burger/src/app/globals.css
+++ b/burger/src/app/globals.css
@@ -8,7 +8,7 @@ section.hero {
   grid-template-columns: .4fr .6fr;
 }
 
-
+select,
 input[type="email"],
 input[type="password"],
 input[type="tel"],
@@ -57,3 +57,4 @@ div.tabs>* {
 div.tabs>*.active {
   @apply bg-primary text-white
 }
+
